# rust-wasmer-plugin-system-example

./: Cargo.toml  README.md  flake.nix
crates/example-macro/: Cargo.toml
crates/example-macro/src/: lib.rs
crates/example-plugin/: Cargo.toml
crates/example-plugin/src/: lib.rs
crates/example-runner/: Cargo.toml
crates/example-runner/src/: main.rs
src/: lib.rs
